frontend/test/should_fail/simple_eval_004.grg
ref ::a:array<int>;

rule r
{
	modify {
		eval {
			::a[42] = 42;
		}
	}
}